searching by user id
